--- a/src/components/HeaderContentBox.css
+++ b/src/components/HeaderContentBox.css
@@ -1,7 +1,8 @@
 .content-area {
-    background-color: #1a1a1a;
     width: 100%;
+    min-width: 600px;
     height: 20%;
+    min-height: 100px;
 
     display: flex;
     align-items: center;
@@ -17,12 +18,11 @@
     outline-style: double;
 
     width: 99%;
-    height: 95%;
+    height: 80%;
 }
 .content-header {
-    background-color: #1a1a1a;
     width: 100%;
-    height: 30%;
+    height: 40%;
     margin: auto;
 
     font-size: 25pt;
@@ -36,7 +36,7 @@
 }
 .content-body {
     width: 100%;
-    height: 70%;
+    height: 60%;
     margin: auto;
 
     font-size: 25pt;
@@ -69,8 +69,4 @@
     justify-content: center;
 
     font-size: 15pt;
-}
-
-span {
-    margin-left: 16px;
 }
