--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -1,63 +1,56 @@
 .sidebar-panel {
-    background-color: #1a1a1a;
-    
     width: 3in;
     min-width: 3in;
     max-width: 3in;
     height: 100vh;
 
+    color: #f5f5f5;
+
     display: block;
-    justify-content: center;
-    align-items: center;
 }
 
 .title {
-    color: #f5f5f5;
-    background-color: #1a1a1a;
+    width: 100%;
+    height: 20%;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 20%;
 }
 
 .buttons-panel {
-    color: #f5f5f5;
-    background-color: #1a1a1a;
+    width:100%;
+    height: 40%;
+
     display: flex;
     position: relative;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width:100%;
-    height: 40%;
 }
 
 .wallet-connect {
-    color: #f5f5f5;
-    background-color: #1a1a1a;
+    width: 100%;
+    height: 30%;
+
     display: block;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 30%;
 }
 
 .media-links-panel {
-    color: #f5f5f5;
-    background-color: #1a1a1a;
+    width: 100%;
+    height: 10%;
+
     display: block;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 10%;
 }
 
 .panel-button {
+    background-color: #1a1a1a;
     text-decoration: none;
-    color:white;
 
-    background-color: transparent;
     border: none;
     border-radius: 4px;
     outline: white;
@@ -76,11 +69,11 @@
 .panel-button a {
     text-decoration: none;
     color: white;
-    width: 100%;
 }
 .panel-button:hover {
-    background-color: violet;
-    
-    font-size: 20px;
+    outline: violet;  
+    outline-width: 1px;
+    outline-style: solid;
+
     transition: 0.5s;
 }
