--- a/src/components/sandbox/pools/PoolCard.css
+++ b/src/components/sandbox/pools/PoolCard.css
@@ -1,6 +1,6 @@
 .card-area {
 
-    width: 180px;
+    width: 200px;
     height: 220px;
 
     display: flex;
@@ -24,8 +24,9 @@
 }
 .card-border:hover {
     outline: violet;
-    outline-width: 2px;
+    outline-width: 1px;
     outline-style: double;
+    transition: 0.5s;
 }
 
 .card-header {
@@ -36,16 +37,14 @@
     align-items: flex-end;
     justify-content: center;
 }
-
 .token-icon-1 {
     max-height: 80%;
-    margin-right: 2.5%;
+    margin-left: -30px;
 }
 .token-icon-2 {
     max-height: 80%;
-    margin-left: 2.5%;
+    margin-right: -30px;
 }
-
 .card-title {
     width: 100%;
     height: 10%;
@@ -73,6 +72,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+
+    
 }
 
 .data-row {
@@ -80,12 +81,14 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+
+    margin-top: 3%;
 }
 .data-title {
-    text-align: left;
-    width: 40%;
+    text-align: right;
+    width: 45%;
 } 
 .data-point {
-    text-align: right;
-    width: 40%;
+    text-align: left;
+    width: 45%;
 }
