--- a/src/components/sandbox/pools/PoolsBody.css
+++ b/src/components/sandbox/pools/PoolsBody.css
@@ -7,6 +7,8 @@
     justify-content: center;
 }
 .pools-body-box {
+    background-color: #1a1a1a;
+    
     border: transparent;
     border-radius: 20px;
     outline: white;
@@ -27,15 +29,15 @@
     border-radius: 20px;
 
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     padding-left: 1%;
 }
 
 .pools-box-body-wrapper {
     width: 100%;
     max-width: 100%;
-    height: 90%;
-    max-height: 90%;
+    height: 82%;
+    max-height: 82%;
 
     display: flex;
     justify-content: center;
@@ -54,9 +56,10 @@
     display: grid;
     justify-items: center;
 
-    padding: 4%;
+    padding: 2%;
     width: 100%;
-    row-gap: 8%;
+    row-gap: 5%;
+    column-gap: 2%;
 
     grid-template-columns: repeat(5, 1fr);
     overflow-y: scroll;
