--- a/src/components/reusable/PositionsTable.css
+++ b/src/components/reusable/PositionsTable.css
@@ -33,6 +33,24 @@
     justify-content: center;
 }
 
+
+
+.table-row {
+    height: 40px;
+}
+.table-row a {
+    text-decoration: none;
+    color: #f5f5f5;
+    width: 100%;
+}
+.table-row:hover {
+    background-color: #f5f5f5;
+    color: #1a1a1a;
+    font-weight: bold;
+    transition: 0.5s;
+}
+
+
 .table-footer {
     width: 100%;  
     height: 6%;
@@ -56,7 +74,9 @@
     width: 98%;
     height: 98%;
 
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .load-more-button a {
     text-decoration: none;
