--- a/src/components/sandbox/dashboard/PopUpActionPane.css
+++ b/src/components/sandbox/dashboard/PopUpActionPane.css
@@ -98,6 +98,7 @@
     width: 100%;
     height: 30%;
     display: flex;
+    margin: 3%;
 }
 .deposit-token-row-icon-area {
     width: 20%;
@@ -127,6 +128,13 @@
     font-size: 15pt;
     align-items: flex-end;
     justify-content: flex-end;
+    text-align: end;
+
+    background-color: transparent;
+    color: white;
+
+    border: transparent;
+
 }
 
 .deposit-token-row-contents-balance {
@@ -134,7 +142,9 @@
     height: 50%;
 
     display: flex;
-    font-size: 12pt;
+    font-size: 10pt;
+
+
 }
 
 
