--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -15,9 +15,9 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 
-    font-size: 15pt;
+    font-size: 30pt;
 }
 
 .buttons-panel {
@@ -100,12 +100,12 @@
     background-color: #1a1a1a;
 
     border: transparent;
-    border-radius: 160px;
+    border-radius: 100px;
     outline: white;
     outline-width: 1px;
     outline-style: double;
 
-    font-size: 80px;
+    font-size: 50px;
     color: white;
 
     display: flex;
@@ -113,8 +113,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 160px;
-    height: 160px;
+    width: 100px;
+    height: 100px;
 }
 
 .wallet-connect-button:hover {
