--- a/src/components/reusable/Slider.css
+++ b/src/components/reusable/Slider.css
@@ -1,5 +1,14 @@
+.slider-area {
+    width: 100%;
+    height: 25px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .horizontal-slider {
-    width: 90%;
+    width: 80%;
     max-width: 500px;
     height: 0px;
 
@@ -10,16 +19,13 @@
   }
   .example-thumb {
     display: flex;
+    align-items: baseline;
     cursor: pointer;
-    position: relative;
     z-index: 100;
-    background: #1a1a1a;
+    background: #ffffff;
     border: 5px solid #ffffff;
     border-radius: 100%;
-    box-shadow: 0 0 2px 0 rgb(0 0 0 / 44%);
-  }
-  .example-thumb:active {
-    background-color: #ff1100;
+    box-shadow: 0 0 5px 0 rgb(0 0 0 / 77%);
   }
 
   .example-track {
@@ -30,7 +36,8 @@
     background: #ff1100;
   }
   .horizontal-slider .example-track {
-    height: 4px;
+    height: 10px;
+    border-radius: 10px;
   }
   .horizontal-slider .example-thumb {
     width: 20px;
