--- a/src/components/sandbox/dashboard/PopUpActionPane.css
+++ b/src/components/sandbox/dashboard/PopUpActionPane.css
@@ -1,6 +1,6 @@
 .popup-action-pane-area {
     width: 100%;
-    height: 100%;
+    height: 300px;
 }
 
 .popup-action-pane-header {
@@ -49,7 +49,7 @@
     background-color: #1a1a1a;
 
     border: transparent;
-    border-radius: 30px;
+    border-radius: 20px;
     outline: white;
     outline-width: 1px;
     outline-style: double;
